syntax = "proto3";

package fintech.Transactor;

service TransactionService {
	rpc WithdrawMoney (TransactionRequest) returns (TransactionReply);
}

message TransactionRequest {
	string account_number = 1;
	int32 amount = 2;
}

message TransactionReply {
	string account_number = 1;
	int32 new_balance = 2;
}